# planarity-filter

./: CMakeLists.txt  README.md
.github/workflows/: cd.yml  ci.yml
data/: random_graph_gen.py
include/: version.h.in
src/: algo.h  main.cpp  old_main.cpp  tests.cpp  utils.h
